[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/Images/idle.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Player_Area.gd" type="Script" id=3]
[ext_resource path="res://Player/UI/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Images/in_air.png" type="Texture" id=5]
[ext_resource path="res://Player/Images/Jump.png" type="Texture" id=6]
[ext_resource path="res://Player/Images/walk.png" type="Texture" id=7]
[ext_resource path="res://Player/Images/walk_air.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "air",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "walk_air",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "walk_floor",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 42.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "walk_air"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -1 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player_Area" type="Area2D" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Area"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="Floor_Check" type="RayCast2D" parent="."]
enabled = true

[node name="Ceiling_Check" type="RayCast2D" parent="."]
position = Vector2( -32, 11 )
rotation = 3.14159
enabled = true

[node name="Ceiling_Check2" type="RayCast2D" parent="."]
position = Vector2( 34, 11 )
rotation = 3.14159
enabled = true

[node name="Ceiling_Check3" type="RayCast2D" parent="."]
position = Vector2( 0, 11 )
rotation = 3.14159
enabled = true

[node name="Wall_Check_Left" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true

[node name="Wall_Check_Right" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true

[connection signal="area_entered" from="Player_Area" to="Player_Area" method="_on_Player_Area_area_entered"]
